# feishuAnkerGlassGo

./: .env.example  .gitignore  Anker_GlassGo_产品提案_提交版.docx  Anker_GlassGo_答辩PPT.pptx  DESCRIBE.md  README.md  demo.html  index.html  multiagents.html  pyproject.toml  requirements.txt  streamlit_app.py  workflow-demo.html
scripts/: build_pptx.py  build_submission_docx.py  run_cli.py
src/glassgo_workflow/: __init__.py  config.py  evidence.py  graph.py  human_proxy.py  llm.py  main.py  models.py  state.py
src/glassgo_workflow/agents/: __init__.py  base.py  s0_question_coach.py  s1_intelligence_analyst.py  s2_opportunity_detective.py  s3_concept_designer.py  s4_red_team.py  s5_expert_committee.py  s6_scribe.py
src/glassgo_workflow/examples/: __init__.py  anker_glassgo.py
src/glassgo_workflow/prompts/: templates.py
tests/: __init__.py  fake_llm.py  test_e2e.py  test_graph.py  test_models.py
