[project]
name = "glassgo-workflow"
version = "0.2.0"
description = "Adversarial multi-agent product definition workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "GlassGo Team" }
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "python-pptx>=1.0",
    "docx2pdf>=0.1.8",
]

[project.scripts]
glassgo = "glassgo_workflow.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W"]
ignore = ["E501"]
